--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -44,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/postcss7-compat": "^2.0.3",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
